--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Tasks#new</h1>
-<p>Find me in app/views/tasks/new.html.erb</p>
+<h1>新規登録</h1>
+<div class="nav justify-content-end">
+  <%= link_to "一覧", tasks_path, class: "nav-link"%>
+</div>
+<%= render partial: 'form', locals: { task: @task }%>
